# CW

./: CMakeLists.txt  PointToSphere.cpp  PointToSphere.h  example.csv  main.cpp  widget.h
